<resources>
    <string name="app_name">Tête haute</string>
    <string name="pref_category_title_high_counter">Compteur du haut</string>
    <string name="pref_category_key_high_counter">pref_cat_key_high_counter</string>
    <string name="pref_key_high_counter_color">pref_key_high_counter_color</string>
    <string name="pref_title_high_counter_color">Couleur compteur haut</string>
    <string name="pref_dialog_title_high_counter_color">Couleur</string>
    <string name="pref_dialog_default_value_high_counter_color">#FF99CC00</string>

    <string name="pref_key_high_counter_font">pref_key_high_counter_font</string>
    <string name="pref_title_high_counter_font">Font du compteur haut</string>
    <string name="pref_dialog_title_high_counter_font">Font</string>
    <string name="pref_dialog_default_value_high_counter_font">font/Orbitron.ttf</string>

    <string name="pref_key_high_counter_unit">pref_key_high_counter_unit</string>
    <string name="pref_title_high_counter_unit">Unité</string>
    <string name="pref_dialog_title_high_counter_unit">Unité</string>
    <string name="pref_dialog_default_value_high_counter_unit">1</string>

    <string name="pref_category_title_low_counter">Compteur du bas</string>
    <string name="pref_category_key_low_counter">pref_cat_key_low_counter</string>
    <string name="pref_key_low_counter_color">pref_key_low_counter_color</string>
    <string name="pref_title_low_counter_color">Couleur du compteur bas</string>
    <string name="pref_dialog_title_low_counter_color">Couleur</string>
    <string name="pref_dialog_default_value_low_counter_color">#FF00DDFF</string>

    <string name="pref_key_low_counter_font">pref_key_low_counter_font</string>
    <string name="pref_title_low_counter_font">Font du compteur bas</string>
    <string name="pref_dialog_title_low_counter_font">Font</string>
    <string name="pref_dialog_default_value_low_counter_font">font/Orbitron.ttf</string>
    <string name="title_activity_settings">Settings</string>

    <string name="trackfilename">track.gpx</string>
    <string name="waypointsfilename">waypoint.gpx</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
